--- a/src/index.html
+++ b/src/index.html
@@ -63,5 +63,8 @@
 
   </main>
   <script src="assets/js/functions.js"></script>
+  <script>
+    carregarLocalStorage();
+  </script>
 </body>
 </html>
